Reduce image size from 180MB to 102MB by building a downsized JRE with jlink